<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Andex</string>
    
    <!-- General -->
    <string name="save">Valider</string>
    <string name="next">Suivant</string>
    <string name="previous">Précédent</string>
    <string name="umlv">Université Paris-Est Marne-la-Vallée</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    
	<!-- Login -->
    <string name="login_user">Nom utilisateur</string>
    <string name="login_password">Mot de passe</string>
    
    
    <!-- Question -->
    <string name="take_photo">Prendre une photo</string>
    <string name="take_schema">Faire un dessin</string>
    <string name="title_question">Question</string>
    <string name="subtitle_question">Reponse</string>
    
    <!-- Quiz -->
    <string name="list_quiz">Examens</string>
    <string name="quiz_status">État:</string>
    <string name="title_quiz">Examen</string>
    <string name="subtitle_questions">Questions</string>
    <string name="timeover">Le temps imparti est écoulé. Voulez-vous sauvegarder les valeurs?</string>
    
    <!-- List Quiz -->
    <string name="text_confirm">Cet examen est en cours. Voulez-vous y participer ?</string>
    <string name="text_time">Cette question est limitée en temps. Vous avez:</string>
    
    
    <!-- Log User -->
    <string name="log_list_view">L\'utilisateur %s a regardé la liste d\'examens</string>
    <string name="log_exam_view">L\'utilisateur %s a vu l\'examen</string>
    <string name="log_exam_take">L\'utilisateur %s a prendre l\'examen</string>
    <string name="log_exam_question_list">L\'utilisateur %s a regardé la liste de questions</string>
    <string name="log_question_view">L\'utilisateur %s a vu la question</string>
    <string name="log_question_answer">L\'utilisateur %s a donné la réponse à la question</string>
    
    <!-- Service -->
    <string name="notification">L\'examen a changé</string>
</resources>