<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#ffffff"
    android:clipChildren="true"
    android:gravity="center"
    android:paddingLeft="30dp"
    android:paddingRight="30dp">
	<TextView
        android:id="@+id/textView0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:paddingTop="60dp"
        android:textSize="30dp"
        android:textColor="#000000"/>
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_user"
        android:paddingTop="20dp"
        android:textSize="12dp"
        android:textColor="#000000"/>

    <EditText
        android:id="@+id/nameuser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:background="#CCCCCC"
        android:textColor="#000000"
        >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_password"
        android:paddingTop="20dp"
        android:textSize="12dp"
        android:textColor="#000000"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:background="#CCCCCC"/>

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:text="@string/save"
        android:onClick="loginByUserAndPassword"
        android:textColor="#000000"
        />
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/umlv"
        android:paddingTop="30dp"
        android:textSize="10dp"
        android:textColor="#000000"/>
</LinearLayout>